Fix TCCC-3298 - issue tracking contest name wrap
git-svn-id: https://coder.topcoder.com/tcs/clients/cronos/applications/direct/trunk@207806 fb370eea-3af6-4597-97f7-f7400a59c12a

--- a/src/web/css/dashboard.css
+++ b/src/web/css/dashboard.css
@@ -5598,15 +5598,14 @@ Contest links
 }
 
 .issueContest .contestNameTd a {
-    margin-left: 16px;
-    line-height: 40px;
+
 }
 
 .issueContest .contestNameLink {
 
     padding-left: 16px;
     padding-right: 10px;
-    padding-top: 15px;
+    padding-top: 25px;
     text-align: left;
 }
 
